--- a/SeqPrep.ipynb
+++ b/SeqPrep.ipynb
@@ -12,74 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9592fa99",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "More than one record found in handle",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/kk/1fzwcqps6dd_3dt2hsjct0tr_85vzj/T/ipykernel_66704/3079989453.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minputFA\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSeqIO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./DENV1_CDS_2.6K.fasta\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"fasta\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/Bio/SeqIO/__init__.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(handle, format, alphabet)\u001b[0m\n\u001b[1;32m    659\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    660\u001b[0m         \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 661\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"More than one record found in handle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    662\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    663\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: More than one record found in handle"
-     ]
-    }
-   ],
-   "source": [
-    "inputFA=SeqIO.read(\"./DENV1_CDS_2.6K.fasta\",\"fasta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3cca9e1e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (2897921327.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/kk/1fzwcqps6dd_3dt2hsjct0tr_85vzj/T/ipykernel_66704/2897921327.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "source": [
-    "IDs=[]\n",
-    "Seqs=[]\n",
-    "with open(\"example.fasta\", \"w\") as output_handle:\n",
-    "    for record in SeqIO.parse(\"./DENV1_CDS_2.6K.fasta\", \"fasta\"):\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "567d3356",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'IDs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/kk/1fzwcqps6dd_3dt2hsjct0tr_85vzj/T/ipykernel_66704/2197758738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIDs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSeqs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'IDs' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "(zip(IDs,Seqs))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "9b7c51eb",
    "metadata": {},
@@ -114,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cabe422f",
    "metadata": {},
    "outputs": [
@@ -122,16 +54,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1784 short sequences\n"
+      "Found 363 short sequences\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1784"
+       "363"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,14 +72,14 @@
     "from Bio import SeqIO\n",
     "FL_sequences = []  # Setup an empty list\n",
     "\n",
-    "inputFasta=\"./DENV2_CDS_1.8K.fasta\"\n",
+    "inputFasta=\"./Contemporary/All_Dengue_Zika_Contemporary_CDS.fasta\"\n",
     "\n",
     "for record in SeqIO.parse(inputFasta, \"fasta\"):\n",
     "    if (len(record.seq)>10000) & (len(record.seq)<12000) & (\"N\" not in record.seq) :        \n",
     "        FL_sequences.append(record)\n",
     "print(\"Found %i short sequences\" % len(FL_sequences))\n",
     "\n",
-    "SeqIO.write(FL_sequences, \"DENV2_FL_CDS_1.8K.fasta\", \"fasta\")"
+    "SeqIO.write(FL_sequences, \"./Contemporary/All_Dengue_Zika_Contemporary_CDS_FL.fasta\", \"fasta\")"
    ]
   },
   {
