--- a/SeqPrep.ipynb
+++ b/SeqPrep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "12bfdaa2",
    "metadata": {},
    "outputs": [],
@@ -12,80 +12,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9b7c51eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'ellipsis' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/Bio/File.py\u001b[0m in \u001b[0;36mas_handle\u001b[0;34m(handleish, mode, **kwargs)\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandleish\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not TextIOWrapper",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/kk/1fzwcqps6dd_3dt2hsjct0tr_85vzj/T/ipykernel_66704/1309876709.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"example.fasta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_handle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mSeqIO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"fasta\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/Bio/SeqIO/__init__.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(sequences, handle, format)\u001b[0m\n\u001b[1;32m    521\u001b[0m         \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    522\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mas_handle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 523\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mrecord\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msequences\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    524\u001b[0m                 \u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformat_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    525\u001b[0m                 \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'ellipsis' object is not iterable"
-     ]
-    }
-   ],
-   "source": [
-    "sequences = ...  # add code here\n",
-    "\n",
-    "from Bio.Seq import Seq\n",
-    "from Bio.SeqRecord import SeqRecord\n",
-    "\n",
-    "\n",
-    "with open(\"example.fasta\", \"w\") as output_handle:\n",
-    "    SeqIO.write(sequences, output_handle, \"fasta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cabe422f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 363 short sequences\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "363"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Bio import SeqIO\n",
-    "FL_sequences = []  # Setup an empty list\n",
+    "def sizeSelect(inputFasta,SIZEmin,SIZEmax):        \n",
+    "    FL_sequences = []  # Setup an empty list\n",
     "\n",
-    "inputFasta=\"./Contemporary/All_Dengue_Zika_Contemporary_CDS.fasta\"\n",
-    "\n",
-    "for record in SeqIO.parse(inputFasta, \"fasta\"):\n",
-    "    if (len(record.seq)>10000) & (len(record.seq)<12000) & (\"N\" not in record.seq) :        \n",
-    "        FL_sequences.append(record)\n",
-    "print(\"Found %i short sequences\" % len(FL_sequences))\n",
-    "\n",
-    "SeqIO.write(FL_sequences, \"./Contemporary/All_Dengue_Zika_Contemporary_CDS_FL.fasta\", \"fasta\")"
+    "    for record in SeqIO.parse(inputFasta, \"fasta\"):\n",
+    "        if (len(record.seq)>SIZEmin) & (len(record.seq)<SIZEmax) & (\"N\" not in record.seq) :        \n",
+    "            FL_sequences.append(record)\n",
+    "    print(\"Found %i short sequences\" % len(FL_sequences))\n",
+    "    \n",
+    "    SeqIO.write(FL_sequences, \".fasta\".split(inputFasta)[0]+\"_sized.fasta\", \"fasta\")\n",
+    "    return()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "93a97476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputFasta=\"./Contemporary/All_Dengue_Zika_Contemporary_CDS.fasta\"\n",
+    "sizeSelect(inputFasta, 10000,12000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2abdbf63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seqTrim(inputAln,start,end):\n",
+    "    sequences = []  # Setup an empty list\n",
+    "\n",
+    "    for record in SeqIO.parse(inputAln, \"fasta\"):\n",
+    "        sequences.append(record[start:end])\n",
+    "        \n",
+    "    SeqIO.write(sequences, inputAln+\"_CprME_trim.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe7cf20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqTrim(\"./Protein_Distances/All_Dengue_Zika_Contemporary_CDS_FL.fasta_codonAlign.aln\",0,2385)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99d585c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqTrim(\"./Protein_Distances/DENV1_FL_CDS_2.6K.fasta_codonAlign.aln\",0,2325)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b72f59fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqTrim(\"./Protein_Distances/DENV2_FL_CDS_1.8K.fasta_codonAlign.aln\",0,2427)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5935a8d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqTrim(\"./Protein_Distances/ZIKV_FL_CDS_900.fasta_codonAlign.aln\",0,2382)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "521557de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import Seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "13f3b47a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Nomerator(inputAln):\n",
+    "    sequences=[]\n",
+    "    for record in SeqIO.parse(inputAln, \"fasta\"):\n",
+    "        splits=record.id.split(\"|\")\n",
+    "        #print(splits)\n",
+    "        record.id=splits[0]+\"|\"+splits[3]\n",
+    "        record.description=\"\"\n",
+    "        seqString=record.seq\n",
+    "        record.seq=seqString.ungap(\"-\")\n",
+    "        #print(record)\n",
+    "        sequences.append(record)\n",
+    "    return(sequences)\n",
+    "\n",
+    "def Gapperator(inputAln):\n",
+    "    sequences=[]\n",
+    "    for record in SeqIO.parse(inputAln, \"fasta\"):\n",
+    "        #print(splits)\n",
+    "        seqString=record.seq\n",
+    "        record.seq=seqString.ungap(\"-\")\n",
+    "        #print(record)\n",
+    "        sequences.append(record)\n",
+    "    return(sequences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "4b69bd67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputAln=\"Protein_Distances/CprME_trimmed/All_Dengue_Zika_Contemporary_CDS_FL.fasta_codonAlign.aln_CprME_trim.fastaBIRCH_outputSeqs.fasta\"\n",
+    "cleanNames=Nomerator(inputAln)\n",
+    "SeqIO.write(cleanNames, inputAln+\"_CleanNames.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6b14847e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputAln=\"Protein_Distances/CprME_trimmed/DENV1_FL_CDS_2.6K.fasta_codonAlign.aln_CprME_trim.fastaBIRCH_outputSeqs.fasta\"\n",
+    "cleanNames=Nomerator(inputAln)\n",
+    "SeqIO.write(cleanNames, inputAln+\"_CleanNames.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "c71a9c58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputAln=\"Protein_Distances/CprME_trimmed/DENV2_FL_CDS_1.8K.fasta_codonAlign.aln_CprME_trim.fastaBIRCH_outputSeqs.fasta\"\n",
+    "cleanNames=Nomerator(inputAln)\n",
+    "SeqIO.write(cleanNames, inputAln+\"_CleanNames.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a8a8bc71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputAln=\"Protein_Distances/CprME_trimmed/ZIKV_FL_CDS_900.fasta_codonAlign.aln_CprME_trim.fastaBIRCH_outputSeqs.fasta\"\n",
+    "cleanNames=Nomerator(inputAln)\n",
+    "SeqIO.write(cleanNames, inputAln+\"_CleanNames.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ea99b377",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "206"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputAln=\"Protein_Distances/CprME_trimmed/Cleaned_Seqs/AllSequences.fasta_codonAlign.alnUniqued.fasta\"\n",
+    "SeqRecords=Gapperator(inputAln)\n",
+    "SeqIO.write(SeqRecords,inputAln+\"ungapped.fasta\",\"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8217f854",
    "metadata": {},
    "outputs": [],
    "source": []
