--- a/SeqPrep.ipynb
+++ b/SeqPrep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cabe422f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "    for record in SeqIO.parse(inputFasta, \"fasta\"):\n",
     "        if (len(record.seq)>SIZEmin) & (len(record.seq)<SIZEmax) & (\"N\" not in record.seq) :        \n",
     "            FL_sequences.append(record)\n",
-    "    print(\"Found %i short sequences\" % len(FL_sequences))\n",
+    "    print(\"Found %i correctly sized sequences\" % len(FL_sequences))\n",
     "    \n",
     "    SeqIO.write(FL_sequences, \".fasta\".split(inputFasta)[0]+\"_sized.fasta\", \"fasta\")\n",
     "    return()"
@@ -32,10 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "93a97476",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 363 correctly sized sequences\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inputFasta=\"./Contemporary/All_Dengue_Zika_Contemporary_CDS.fasta\"\n",
     "sizeSelect(inputFasta, 10000,12000)"
@@ -43,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2abdbf63",
    "metadata": {},
    "outputs": [],
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bbe7cf20",
    "metadata": {},
    "outputs": [],
@@ -69,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "99d585c0",
    "metadata": {},
    "outputs": [],
@@ -79,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b72f59fe",
    "metadata": {},
    "outputs": [],
@@ -89,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5935a8d3",
    "metadata": {},
    "outputs": [],
